feat(backend): adiciona listagem e filtros de personagens (#15)
