# apps/api/src/features/characters/character.models.ts
@@ -1,0 +1,21 @@
+export type CharacterSummary = {
+  id: number;
+  name: string;
+  status: string;
+  species: string;
+  type: string;
+  gender: string;
+  image: string;
+  origin: string;
+  location: string;
+  episodeCount: number;
+};
+
+export type CharacterListResult = {
+  page: number;
+  totalPages: number;
+  totalItems: number;
+  hasNextPage: boolean;
+  hasPreviousPage: boolean;
+  characters: CharacterSummary[];
+};
